@@ -1,5 +1,6 @@
 0.16
  - Add link to Value::Lexeme to Wikibase::Datatype::Print.
+ - Fix modules used in tests for Wikibase::Datatype::Print::Lexeme.
 
 0.15 2023-10-29T16:44:43+01:00
  - Fix test dependencies.
